# testscript-rs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  FUZZ.md  README.md  manual_test.txt  plan.md  rustfmt.toml  test_symlink.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml  fuzz.yml  release.yaml  release.yml
examples/: advanced_conditions.rs  manual_env_test.rs  manual_update_test.rs  test_runner.rs  test_workdir_root.rs
examples/sample-cli/: Cargo.toml  README.md
examples/sample-cli/src/: main.rs
examples/sample-cli/testdata/: basic_functionality.txt  count_commands.txt  file_operations.txt  grep_functionality.txt  list_directory.txt  simple_working_test.txt
examples/sample-cli/tests/: integration_test.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: env_substitution.rs  parser.rs  structured.rs  tokens.rs
src/: error.rs  lib.rs  parser.rs  run.rs
src/run/: commands.rs  environment.rs  execution.rs  mod.rs  params.rs
testdata/: advanced_api_demo.txt  advanced_conditions.txt  cmd_stdout_stderr.txt  cmpenv.txt  command.txt  cpstdout.txt  env_conditions.txt  exists.txt  hello.txt  network_conditions.txt  program_conditions.txt  rust_cond.txt  setenv.txt  stdin.txt  test_quotes.txt  test_symlink.txt  unicode_dot_regex.txt  unicode_emoji.txt  unicode_grep.txt  unicode_multiple.txt  unicode_regex.txt  unicode_special_chars.txt  unicode_stderr.txt  unicode_stdout.txt
tests/: advanced_conditions.rs  builtin_commands.rs  edge_cases.rs  error_messages.rs  integration.rs  integration_tests.rs  preserve_work.rs  setup_hook.rs  specific_files.rs  stdout_stderr_verification.rs  unicode_handling.rs  update_scripts.rs  workdir_root.rs
