[package]
name = "testscript-rs"
version = "0.1.0"
edition = "2021"
authors = ["Steve Klabnik <steve@steveklabnik.com>"]
license = "MIT OR Apache-2.0"
description = "A Rust crate for testing command-line tools using filesystem-based script files"
repository = "https://github.com/steveklabnik/testscript-rs"
keywords = ["testing", "cli", "testscript", "integration-tests"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.0"
walkdir = "2.0"
regex = "1.0"
