[package]
name = "testscript-rs"
version = "0.2.11"
edition = "2021"
authors = ["Jason Hall"]
license = "Apache-2.0"
description = "A Rust crate for testing command-line tools using filesystem-based script files"
repository = "https://github.com/imjasonh/testscript-rs"
keywords = ["testing", "cli", "testscript", "integration-tests"]
categories = ["development-tools::testing"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tempfile = "3.0"
walkdir = "2.0"
regex = "1.0"
termcolor = { version = "1.4", optional = true }
atty = { version = "0.2", optional = true }

[features]
default = []
colors = ["termcolor", "atty"]

[dev-dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
